objects/WorkdayCostCenterSync__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This stores settings for Workday Cost Center sync process.</description>
    <fields>
        <fullName>Error_Report_Email__c</fullName>
        <label>Error Report Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Update_Time_Stamp__c</fullName>
        <label>Last Update Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Web_Service_Password__c</fullName>
        <label>Web Service Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Service_Url__c</fullName>
        <label>Web Service Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web_Service_User_Name__c</fullName>
        <label>Web Service User Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>WorkdayCostCenterSync</label>
</CustomObject>